Add J. Patrick Raftery and Daniel Cabena, remove Artist.Center, and increase base font size on each screen

--- a/src/data/opera.yml
+++ b/src/data/opera.yml
@@ -16,12 +16,12 @@
   link: https://www.coc.ca/productions/13109
 
   features:
-  - Watch a quick <a href="https://www.youtube.com/watch?v=4EnnRWLdy8Q" target="_blank" rel="noopener nofollow" class="link-inline">preview</a>.
-  - See <a href="https://www.youtube.com/watch?v=svmQ-DsDZQM" target="_blank" rel="noopener nofollow" class="link-inline">audience reactions</a>.
-  - Hear soprano Jane Archibald <a href="https://www.youtube.com/watch?v=0brQMYk4nEQ" target="_blank" rel="noopener nofollow" class="link-inline">describe the production</a>.
-  - Watch the pit transform into a <a href="https://www.youtube.com/watch?v=t6cPgqBfomA" target="_blank" rel="noopener nofollow" class="link-inline">67,000-litre pool</a>.
-  - Watch acrobats use light to create <a href="https://www.youtube.com/watch?v=jYqGZ0oH_JE" target="_blank" rel="noopener nofollow" class="link-inline">shadow puppets</a>.
-  - See the show's <a href="https://www.youtube.com/watch?v=-Ae8ureLNKw" target="_blank" rel="noopener nofollow" class="link-inline">75 unique puppets</a>.
+  - Watch a quick <a href="https://www.youtube.com/watch?v=4EnnRWLdy8Q" target="_blank" rel="noopener" class="link-inline">preview</a>.
+  - See <a href="https://www.youtube.com/watch?v=svmQ-DsDZQM" target="_blank" rel="noopener" class="link-inline">audience reactions</a>.
+  - Hear soprano Jane Archibald <a href="https://www.youtube.com/watch?v=0brQMYk4nEQ" target="_blank" rel="noopener" class="link-inline">describe the production</a>.
+  - Watch the pit transform into a <a href="https://www.youtube.com/watch?v=t6cPgqBfomA" target="_blank" rel="noopener" class="link-inline">67,000-litre pool</a>.
+  - Watch acrobats use light to create <a href="https://www.youtube.com/watch?v=jYqGZ0oH_JE" target="_blank" rel="noopener" class="link-inline">shadow puppets</a>.
+  - See the show's <a href="https://www.youtube.com/watch?v=-Ae8ureLNKw" target="_blank" rel="noopener" class="link-inline">75 unique puppets</a>.
 
   details:
   - name: Company
@@ -58,8 +58,8 @@
   link: https://www.coc.ca/productions/13097
 
   features:
-  - Watch a quick <a href="https://www.youtube.com/watch?v=W6kBk35uU-s" target="_blank" rel="noopener nofollow" class="link-inline">preview</a>.
-  - Take a <a href="https://www.youtube.com/watch?v=2x4Ce1mFkD4" target="_blank" rel="noopener nofollow" class="link-inline">backstage tour</a>.
+  - Watch a quick <a href="https://www.youtube.com/watch?v=W6kBk35uU-s" target="_blank" rel="noopener" class="link-inline">preview</a>.
+  - Take a <a href="https://www.youtube.com/watch?v=2x4Ce1mFkD4" target="_blank" rel="noopener" class="link-inline">backstage tour</a>.
 
   details:
   - name: Company
@@ -151,7 +151,7 @@
     link: http://operagoto.com/kopernikus-review/
   
   features:
-  - Watch a quick <a href="https://www.youtube.com/watch?v=D1klhVfHu0c" target="_blank" rel="noopener nofollow" class="link-inline">preview</a>.
+  - Watch a quick <a href="https://www.youtube.com/watch?v=D1klhVfHu0c" target="_blank" rel="noopener" class="link-inline">preview</a>.
   
   details:
   - name: Company
@@ -198,7 +198,7 @@
     link: https://torontomasqueblog.wordpress.com/2017/05/01/two-extraordinary-concerts-and-an-announcement/
 
   features:
-  - Watch a <a href="https://www.youtube.com/watch?v=pAketmvRsUU" target="_blank" rel="noopener nofollow" class="link-inline">full performance</a>.
+  - Watch a <a href="https://www.youtube.com/watch?v=pAketmvRsUU" target="_blank" rel="noopener" class="link-inline">full performance</a>.
 
   details:
   - name: Company
@@ -233,8 +233,8 @@
   link: https://www.coc.ca
 
   features:
-  - Watch a quick <a href="https://www.youtube.com/watch?v=kewzS7-loV0" target="_blank" rel="noopener nofollow" class="link-inline">preview</a>.
-  - Learn <a href="https://www.youtube.com/watch?v=MRtRmFuqQA8" target="_blank" rel="noopener nofollow" class="link-inline">5 cool things</a> about The Magic Flute.
+  - Watch a quick <a href="https://www.youtube.com/watch?v=kewzS7-loV0" target="_blank" rel="noopener" class="link-inline">preview</a>.
+  - Learn <a href="https://www.youtube.com/watch?v=MRtRmFuqQA8" target="_blank" rel="noopener" class="link-inline">5 cool things</a> about The Magic Flute.
 
   details:
   - name: Company
@@ -314,8 +314,8 @@
   link: https://www.opera-lyon.com/
 
   features:
-  - Watch a quick <a href="https://www.youtube.com/watch?v=AWfMxNRnqsM" target="_blank" rel="noopener nofollow" class="link-inline">preview</a> (in French).
-  - Read about the <a href="https://culturebox.francetvinfo.fr/opera-classique/opera/greve-a-l-opera-de-lyon-le-rossignol-suspendu-jusqu-a-la-fin-de-la-semaine-92725" target="_blank" rel="noopener nofollow" class="link-inline">technicians strike</a> that shortened the run (in French).
+  - Watch a quick <a href="https://www.youtube.com/watch?v=AWfMxNRnqsM" target="_blank" rel="noopener" class="link-inline">preview</a> (in French).
+  - Read about the <a href="https://culturebox.francetvinfo.fr/opera-classique/opera/greve-a-l-opera-de-lyon-le-rossignol-suspendu-jusqu-a-la-fin-de-la-semaine-92725" target="_blank" rel="noopener" class="link-inline">technicians strike</a> that shortened the run (in French).
 
   details:
   - name: Company
@@ -365,8 +365,8 @@
     link: http://www.heedthehedonist.com/two-shows-left-this-weekend-don-pasquale
   
   features:
-  - Watch a quick <a href="https://www.youtube.com/watch?v=WvjInQBT3RQ" target="_blank" rel="noopener nofollow" class="link-inline">preview</a>.
-  - Watch director Peter Kazaras explain <a href="https://www.youtube.com/watch?v=RZOgODyUB8A" target="_blank" rel="noopener nofollow" class="link-inline">what inspired the production</a>.
+  - Watch a quick <a href="https://www.youtube.com/watch?v=WvjInQBT3RQ" target="_blank" rel="noopener" class="link-inline">preview</a>.
+  - Watch director Peter Kazaras explain <a href="https://www.youtube.com/watch?v=RZOgODyUB8A" target="_blank" rel="noopener" class="link-inline">what inspired the production</a>.
 
   details:
   - name: Company
@@ -411,7 +411,7 @@
     link: http://thesunbreak.com/2011/11/21/a-riveting-werther-from-seattle-operas-young-artists/
   
   features:
-  - Watch director Peter Kazaras <a href="https://www.youtube.com/watch?v=zS1xnVewSxY" target="_blank" rel="noopener nofollow" class="link-inline">describe the production</a>.
+  - Watch director Peter Kazaras <a href="https://www.youtube.com/watch?v=zS1xnVewSxY" target="_blank" rel="noopener" class="link-inline">describe the production</a>.
 
   details:
   - name: Company
@@ -455,8 +455,8 @@
     link: https://definitelytheopera.wordpress.com/2011/05/04/ariadne-auf-toronto/
   
   features:
-  - Watch a quick <a href="https://vimeo.com/23017911" target="_blank" rel="noopener nofollow" class="link-inline">preview</a>.
-  - Watch director Neil Armfield and conductor Sir Andrew Davis <a href="https://www.youtube.com/watch?v=QCb5_1LPXzE" target="_blank" rel="noopener nofollow" class="link-inline">describe the production</a>.
+  - Watch a quick <a href="https://vimeo.com/23017911" target="_blank" rel="noopener" class="link-inline">preview</a>.
+  - Watch director Neil Armfield and conductor Sir Andrew Davis <a href="https://www.youtube.com/watch?v=QCb5_1LPXzE" target="_blank" rel="noopener" class="link-inline">describe the production</a>.
 
   details:
   - name: Company
@@ -498,7 +498,7 @@
     link: https://learn.coc.ca/coc-news?entryid=1733
   
   features:
-  - Watch a quick <a href="https://www.youtube.com/watch?v=oK6MTuYBoG0" target="_blank" rel="noopener nofollow" class="link-inline">preview</a>.
+  - Watch a quick <a href="https://www.youtube.com/watch?v=oK6MTuYBoG0" target="_blank" rel="noopener" class="link-inline">preview</a>.
 
   details:
   - name: Company
@@ -583,7 +583,7 @@
     source: Arthur Kaptainis, National Post
     link: http://nationalpost.com/entertainment/music/the-coc-ensemble-gets-magical
   features:
-  - Watch a quick <a href="https://www.youtube.com/watch?v=uFqnhM7Qc64" target="_blank" rel="noopener nofollow" class="link-inline">preview</a>.
+  - Watch a quick <a href="https://www.youtube.com/watch?v=uFqnhM7Qc64" target="_blank" rel="noopener" class="link-inline">preview</a>.
 
   details:
   - name: Company
@@ -620,8 +620,8 @@
   link: https://www.coc.ca
 
   features:
-  - Watch a quick <a href="https://www.youtube.com/watch?v=DqXpUDcoW_U" target="_blank" rel="noopener nofollow" class="link-inline">preview</a>.
-  - See director Yoshi Oida <a href="https://www.youtube.com/watch?v=GUY5FgMvaL0" target="_blank" rel="noopener nofollow" class="link-inline"> describe the production</a>.
+  - Watch a quick <a href="https://www.youtube.com/watch?v=DqXpUDcoW_U" target="_blank" rel="noopener" class="link-inline">preview</a>.
+  - See director Yoshi Oida <a href="https://www.youtube.com/watch?v=GUY5FgMvaL0" target="_blank" rel="noopener" class="link-inline"> describe the production</a>.
 
   details:
   - name: Company
@@ -658,9 +658,9 @@
   link: https://www.coc.ca
 
   features:
-  - Watch director Tim Albery <a href="https://www.youtube.com/watch?v=QYwbSMWO_j0" target="_blank" rel="noopener nofollow" class="link-inline">describe the production</a>.
-  - Hear soprano Sondra Radvanovsky reflect on <a href="https://www.youtube.com/watch?v=wJI8kZ_S1jg" target="_blank" rel="noopener nofollow" class="link-inline">her debut as Aida</a>.
-  - See the show's <a href="https://www.youtube.com/watch?v=n-OmD8e3GKs" target="_blank" rel="noopener nofollow" class="link-inline">6 custom-built trumpets</a>.
+  - Watch director Tim Albery <a href="https://www.youtube.com/watch?v=QYwbSMWO_j0" target="_blank" rel="noopener" class="link-inline">describe the production</a>.
+  - Hear soprano Sondra Radvanovsky reflect on <a href="https://www.youtube.com/watch?v=wJI8kZ_S1jg" target="_blank" rel="noopener" class="link-inline">her debut as Aida</a>.
+  - See the show's <a href="https://www.youtube.com/watch?v=n-OmD8e3GKs" target="_blank" rel="noopener" class="link-inline">6 custom-built trumpets</a>.
 
   details:
   - name: Company
@@ -800,7 +800,7 @@
   link: https://www.coc.ca
 
   features:
-  - Watch set designer Paul Edwards <a href="https://www.youtube.com/watch?v=vtQWIQgTc9s" target="_blank" rel="noopener nofollow" class="link-inline"> describe the production's sets</a>.
+  - Watch set designer Paul Edwards <a href="https://www.youtube.com/watch?v=vtQWIQgTc9s" target="_blank" rel="noopener" class="link-inline"> describe the production's sets</a>.
 
   details:
   - name: Company
@@ -880,8 +880,8 @@
     link: http://www.stage-door.com/Theatre/2009/Entries/2009/10/21_The_Nightingale_and_Other_Short_Fables.html
 
   features:
-  - Watch director Robert Lepage <a href="https://www.youtube.com/watch?v=jGGc1r4wl6E" target="_blank" rel="noopener nofollow" class="link-inline">describe the production</a> (6 parts).
-  - See puppet designer Michael Curry demonstrate the show's <a href="https://www.youtube.com/watch?v=QGu_mwN8v3A" target="_blank" rel="noopener nofollow" class="link-inline">custom-built puppets</a>.
+  - Watch director Robert Lepage <a href="https://www.youtube.com/watch?v=jGGc1r4wl6E" target="_blank" rel="noopener" class="link-inline">describe the production</a> (6 parts).
+  - See puppet designer Michael Curry demonstrate the show's <a href="https://www.youtube.com/watch?v=QGu_mwN8v3A" target="_blank" rel="noopener" class="link-inline">custom-built puppets</a>.
 
   details:
   - name: Company
@@ -1592,7 +1592,7 @@
   link: http://openears.ca
 
   features:
-  - Watch a 2010 performance of "Cell Life" at <a href="https://www.youtube.com/watch?v=3D4J468U2sU" target="_blank" rel="noopener nofollow" class="link-inline">Stratford Summer Music</a>.
+  - Watch a 2010 performance of "Cell Life" at <a href="https://www.youtube.com/watch?v=3D4J468U2sU" target="_blank" rel="noopener" class="link-inline">Stratford Summer Music</a>.
 
   details:
   - name: Company
