--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   ],
   "dependencies": {
     "chessboardjs": "0.0.1",
+    "firebase": "^5.3.1",
     "gatsby": "^1.9.255",
     "gatsby-cli": "^1.1.51",
     "gatsby-image": "^1.0.47",
@@ -25,6 +26,7 @@
     "intersection-observer": "^0.5.0",
     "loadjs": "^3.5.4",
     "object-fit-images": "^3.2.3",
+    "react-firebaseui": "^3.0.6",
     "react-helmet": "^5.2.0",
     "react-icons": "^2.2.7",
     "react-inlinesvg": "^0.8.1",
