Move Firebase config to .env variables for use in local development which are also entered in the Netlify dashboard

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,6 @@ public/
 yarn-error.log
 
 # Firebase config
-src/components/cards/firebase/firebase-config.js
+.env.development
+.env.production
+# src/components/cards/firebase/firebase-config.js
