--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "autoprefixer": "^8.3.0",
     "babel-eslint": "^8.2.3",
+    "dotenv": "^6.0.0",
     "eslint": "^4.19.1",
     "eslint-plugin-compat": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
