--- a/package.json
+++ b/package.json
@@ -11,51 +11,56 @@
   "dependencies": {
     "chessboardjs": "0.0.1",
     "firebase": "^5.3.1",
-    "gatsby": "^1.9.255",
-    "gatsby-cli": "^1.1.51",
-    "gatsby-image": "^1.0.47",
-    "gatsby-link": "^1.6.41",
-    "gatsby-plugin-netlify": "^1.0.19",
-    "gatsby-plugin-react-helmet": "^2.0.11",
-    "gatsby-plugin-react-next": "^1.0.11",
-    "gatsby-plugin-sharp": "^1.6.43",
-    "gatsby-source-filesystem": "^1.5.34",
-    "gatsby-transformer-json": "^1.0.16",
-    "gatsby-transformer-sharp": "^1.6.23",
-    "gatsby-transformer-yaml": "^1.5.17",
+    "gatsby": "^2.0.0-beta.100",
+    "gatsby-cli": "^2.0.0-beta.13",
+    "gatsby-image": "^2.0.0-beta.7",
+    "gatsby-plugin-manifest": "^2.0.2-beta.5",
+    "gatsby-plugin-netlify": "^2.0.0-beta.6",
+    "gatsby-plugin-netlify-cache": "^0.1.0",
+    "gatsby-plugin-offline": "^2.0.0-beta.9",
+    "gatsby-plugin-react-helmet": "^3.0.0-beta.4",
+    "gatsby-plugin-robots-txt": "^1.3.0",
+    "gatsby-plugin-sharp": "^2.0.0-beta.7",
+    "gatsby-plugin-sitemap": "^2.0.0-beta.4",
+    "gatsby-plugin-svgr": "^2.0.0-alpha",
+    "gatsby-source-filesystem": "^2.0.1-beta.10",
+    "gatsby-transformer-sharp": "^2.1.1-beta.7",
+    "gatsby-transformer-yaml": "^2.1.1-beta.3",
     "intersection-observer": "^0.5.0",
     "loadjs": "^3.5.4",
     "object-fit-images": "^3.2.3",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
     "react-firebaseui": "^3.0.6",
     "react-helmet": "^5.2.0",
     "react-icons": "^2.2.7",
     "react-inlinesvg": "^0.8.1",
     "react-transition-group": "^2.3.1",
     "react-waypoint": "^8.0.1",
-    "tailwindcss": "^0.5.2",
+    "shortid": "^2.2.12",
+    "tailwindcss": "^0.6.5",
     "what-input": "^5.0.5"
   },
   "devDependencies": {
+    "@babel/plugin-transform-react-constant-elements": "^7.0.0-rc.1",
     "autoprefixer": "^8.3.0",
     "babel-eslint": "^8.2.3",
     "dotenv": "^6.0.0",
     "eslint": "^4.19.1",
-    "eslint-plugin-compat": "^2.2.0",
+    "eslint-config-react-app": "^2.1.0",
+    "eslint-plugin-flowtype": "^2.50.0",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
-    "gatsby-plugin-sitemap": "^1.2.20",
-    "postcss-cli": "^5.0.0",
+    "gatsby-plugin-postcss": "^2.0.0-beta.3",
     "precss": "^3.1.2",
-    "purgecss": "^0.21.0",
+    "purgecss-webpack-plugin": "^1.2.1",
     "stylelint": "^9.2.0",
     "stylelint-config-recommended": "^2.1.0",
     "stylelint-no-unsupported-browser-features": "^3.0.0"
   },
   "scripts": {
-    "watch:postcss": "postcss src/styles/index.css -o src/styles/builds/after-postcss/output.css -w",
-    "build:postcss": "postcss src/styles/index.css -o src/styles/builds/after-postcss/output.css",
-    "build:purgecss": "purgecss -c ./purgecss.config.js -o src/styles/builds/after-purgecss",
-    "dev": "gatsby develop & npm run watch:postcss",
-    "build": "npm run build:postcss && npm run build:purgecss && gatsby build"
+    "dev": "gatsby develop --https",
+    "build": "gatsby build"
   }
 }
